--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,33 @@
+body {
+    margin: 0;
+    background-color: gray;
+}
+
 /* header */
+
+.logo {
+    background-color: white;
+    padding: 1em;
+}
+
+.logo_img {
+    width: 50px;
+    vertical-align: middle;
+}
+
+.logo_title {
+    font-size: 2rem;
+    vertical-align: middle;
+    font-weight: bold;
+}
+
+/* header */
+
+/* container */
+.container {
+    width: 80%;
+    max-width: 600px;
+    margin: auto 0;
+}
+
+/* container */
