--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
 
 /* header */
 
-.logo {
+header {
     background-color: white;
     padding: 1em;
     margin-bottom: 40px;
@@ -22,7 +22,7 @@ body {
     font-weight: bold;
 }
 
-/* header */
+/* end header */
 
 /* head container */
 .head_container {
